# survey-tool

./: .gitignore  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: build.py  dev.py
src/: main.py  test_functionality.py
src/backend/: database.py
src/backend/models/: __init__.py  audit.py  campaign.py  contact.py  email.py  user.py
src/backend/providers/: __init__.py  base.py  outlook_provider.py
src/backend/services/: __init__.py  audit_service.py  auth_service.py  campaign_service.py  contact_service.py  email_service.py
src/config/: config.yaml  logging.yaml
src/frontend/web/: index.html
src/frontend/web/css/: app.css  dark-theme.css  print.css
src/frontend/web/i18n/: en.json  fr.json
src/frontend/web/js/: api.js  app.js  i18n.js  router.js
src/frontend/web/js/components/: DataTable.js  FileUpload.js  Modal.js  Toast.js
src/frontend/web/js/views/: Campaigns.js  Dashboard.js  Profile.js  Settings.js  Templates.js
src/frontend/web/libs/: marked.min.js
